--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,44 +7,47 @@
     <title>mypage</title>
     <!-- 引入 Bootstrap CSS 文件 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 
 <body>
 <!-- header area -->
 <header>
     <ul id="nav">
-        <li class="slide1"></li>
         <li class="slide2"></li>
         <li class="active"><a href="/" >Alpha</a></li>
         <li><a href="/users">Beta</a></li>
         <li><a href="/form">Gamma</a></li>
     </ul>
-    <button id="menu-btn">Menu</button> <!-- 新增的按钮 -->
 </header>
-<div>
-    <h1>Home Page</h1>
-</div>
+<!-- end of header area -->
 
 <section class="welcome">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h2>Welcome to Our Website</h2>
-        <p>We are excited to have you here! Explore our wide range of products and services.</p>
+        <h1>Welcome to my page</h1>
+        <p>My name is Alpha, I am a web
       </div>
       <div class="col-md-6">
-        <img src="images/tree.jpg" alt="Welcome Image">
+        <img src="images/alpha.jpg" alt="Alpha">
       </div>
     </div>
   </div>
 </section>
 
 
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- 引入 Bootstrap JS 文件（可选） -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="javascripts/script.js"></script>
+
+
 </body>
 </html>
