--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,20 +2,22 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Personal Webpage/Portfolio</title>
-  <title>My personal Webpage.</title>
-  <meta name="description" content="Game Developer + Web Designer">
+  <title></title>
+  <title></title>
+  <meta name="description" content="">
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
-<link rel="stylesheet" href="stylesheets/user.css">
-<link rel="stylesheet" href="stylesheets/style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
+  <link rel="stylesheet" href="stylesheets/user/user.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/user/anime.css">
+  <link rel="stylesheet" href="stylesheets/user/skill.css">
+  <link rel="stylesheet" href="stylesheets/user/contract.css">
 </head>
-<body>
-<!-- partial:index.partial.html -->
 
+<body>
   <!-- navbar header -->
   <header>
     <ul id="nav">
@@ -43,11 +45,8 @@
   <!-- end navbar slider -->
 
   <!-- begin fullpage -->
-
   <div id="fullpage">
-
     <!-- begin section -->
-
     <div class="section aboutme" data-anchor="aboutme">
       <div class="opaque-bg animated fadeInDown">
         <h1 style="color:white">FRASHO<span style="color:#FF6363">/</span>FRADAR</h1>
@@ -105,8 +104,8 @@
     </div>
     <!-- end section -->
 
-    <!-- begin section -->
 
+    <!-- begin section -->
     <div class="section" data-anchor="projects">
       <div class="content-slide">
         <div class="slide">
@@ -159,8 +158,8 @@
     </div>
     <!-- end section -->
 
-    <!-- begin section -->
 
+    <!-- begin section -->
     <div class="section" data-anchor="contact">
       <div class="content wow fadeInDown" data-wow-delay="0.2s">
         <h1>CONTACT ME</h1>
@@ -202,8 +201,13 @@
     <!-- end section -->
 
   <!-- end fullpage -->
-<!-- partial -->
 
+
+
+
+
+
+<!-- partial -->
 <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js'></script>
