--- a/views/users.ejs
+++ b/views/users.ejs
@@ -18,17 +18,16 @@
 </head>
 
 <body>
-  <!-- navbar header -->
-  <header>
-    <ul id="nav">
-        <li class="slide2"></li>
-        <li><a href="/">Alpha</a></li>
-        <li class="active"><a href="/users">Beta</a></li>
-        <li><a href="/form">Gamma</a></li>
-    </ul>
-</header>
-  <!-- end navbar header -->
-
+<!-- navbar header -->
+    <header style="position: fixed; z-index: 1000;">
+      <ul id="nav" style="opacity: 0.9">
+          <li class="slide2"></li>
+          <li><a href="/">Alpha</a></li>
+          <li class="active"><a href="/users">Beta</a></li>
+          <li><a href="/form">Gamma</a></li>
+      </ul>
+    </header>
+<!-- end navbar header -->
   <!-- sidebar slider -->
   <div class="nav-screen">
     <i class="fa fa-times fa-3x"></i>
