--- a/public/stylesheets/user/user.css
+++ b/public/stylesheets/user/user.css
@@ -103,7 +103,7 @@ p {
 }
 
 .nav-links a:hover {
-  color: #ff6363;
+  color: #16e4b5;
   -webkit-transition: all 0.6s ease-in-out;
   -o-transition: all 0.6s ease-in-out;
   -ms-transition: all 0.6s ease-in-out;
@@ -112,7 +112,8 @@ p {
 }
 
 #fp-nav ul li .fp-tooltip {
-  color: #5f5f5f !important;
+  color: #ff0000 !important;
+  font-size: 24px;
 }
 
 /* Expanding border effect */
@@ -147,9 +148,9 @@ p {
 }
 
 .aboutme {
-  background: url("https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y29kaW5nfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80")
-    no-repeat;
+  background: url("/images/lake.jpg");
   background-size: cover;
+  height: 80vh;
 }
 
 .aboutme p {
@@ -162,7 +163,7 @@ p {
 
 .fa-chevron-down {
   color: #ff6363 !important;
-  bottom: 10px;
+  bottom: 50px;
   margin-left: -30px;
   cursor: pointer;
   position: absolute;
