表格修改，增加内容

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -31,7 +31,7 @@
     <div class="question card">
       <p class="questionText"></p>
       <div class="options"></div> <!-- END .options -->
-      <div class="countdown">Time left: <span class="countdown-timer">15</span> seconds</div>
+      <div class="countdown" style="font-size: 24px; color: #f59ca4; text-align: right;">Time left: <span class="countdown-timer">15</span> seconds</div>
     </div> <!-- END .question -->
     <div class="leaderboard"></div>
 
