--- a/views/form.ejs
+++ b/views/form.ejs
@@ -28,6 +28,7 @@
   <div class="quiz">
     <div class="p_1"><progress max="8" value="0"></progress></div>
     <div class="progressData"><span class="current">0</span> / <span class="limit">0</span></div>
+        <div class="start-screen"></div>
     <div class="question card">
       <p class="questionText"></p>
       <div class="options"></div> <!-- END .options -->
