--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/form.css">
     <link rel="stylesheet" href="stylesheets/leaderboard.css">
+    <link rel="stylesheet" href="stylesheets/startquiz.css">
 </head>
 
 <body>
@@ -32,7 +33,11 @@
     <div class="question card">
       <p class="questionText"></p>
       <div class="options"></div> <!-- END .options -->
-      <div class="countdown" style="font-size: 24px; color: #f59ca4; text-align: right;">Time left: <span class="countdown-timer">15</span> seconds</div>
+      <div class="countdown"
+           style="font-size: 24px; color: #f59ca4; text-align: right;">
+          Time left:
+          <span class="countdown-timer">15</span>seconds</div>
+
     </div> <!-- END .question -->
     <div class="leaderboard"></div>
 
