--- a/views/form.ejs
+++ b/views/form.ejs
@@ -24,8 +24,9 @@
     </ul>
 </header>
 
-<div class="container m_t_2">
-  <h1 class="text-white">Take the quiz to see if you are taking advantage of your customer's voice.</h1>
+<div class="background">
+<div class="container m_t_2" >
+  <h1 class="text-black">F1 Knowledge Q&A</h1>
   <div class="quiz">
     <div class="p_1"><progress max="8" value="0"></progress></div>
     <div class="progressData"><span class="current">0</span> / <span class="limit">0</span></div>
@@ -43,6 +44,8 @@
 
   </div> <!-- END .quiz -->
 </div> <!-- END .container -->
+</div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
