--- a/views/users.ejs
+++ b/views/users.ejs
@@ -38,7 +38,8 @@
         <ul id='myMenu'>
           <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
           <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
-          <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
+          <li data-menuanchor="fourthPage"><a href="#game">GAME</a></li>
+          <li data-menuanchor="fifthPage"><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -46,11 +47,11 @@
   <!-- end navbar slider -->
 
   <!-- begin fullpage -->
-
+<div id="fullpage">
     <!-- begin section -->
     <div class="section aboutme" data-anchor="aboutme">
       <div class="opaque-bg animated fadeInDown">
-        <h1 style="color:white">FRASHO<span style="color:#FF6363">/</span>FRADAR</h1>
+        <h1 style="color:white; font-size: 36px">Wang JUNBO<span style="color:#FF6363">/</span>50087530</h1>
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
       </div>
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
@@ -58,12 +59,27 @@
     <!-- end section -->
 
     <!-- begin section -->
-  <div id="fullpage">
-    <div class="section" data-anchor="skills">
-      <div class="content">
-        <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
-        <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm Frasho, aka FRADAR! I am a game developer and web designer. I like reading and writing blogs and stories, and I really love coding! I have made many games over the years, such as a racing game called TurboBoost and a geometry-dash inspired game. I'm a big fan of multiplayer games and I have even made 3 .io games! I have also made many chrome extensions and bookmarklets like dark mode,WebEdit and WikiSearch.</p>
 
+    <div class="section" data-anchor="skills">
+      <div class="content-skill">
+        <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
+        <div class="col-md-6">
+        <p class="wow fadeInDown" data-wow-delay="0.2s">
+          Hi, I'm Frasho, aka FRADAR!
+          I am a game developer and web designer.
+          I like reading and writing blogs and stories,
+          and I really love coding!
+          I have made many games over the years,
+          such as a racing game called TurboBoost and a geometry-dash inspired game.
+          I'm a big fan of multiplayer games and I have even made 3 .io games!
+          I have also made many chrome extensions and bookmarklets like dark mode,WebEdit and WikiSearch.
+        </p>
+        </div>
+        <div class="col-md-6">
+        <img src="images/checo2022.jpg" style="width: 50%; height: auto;">
+        </div>
+        <div class="col-md-12" style="margin-top: 40px">
+          <h2 class="wow fadeInDown" data-wow-delay="0.2s" style="color: #06A2CB">CODE SKILLS</h2>
         <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
           <div class="skillbar clearfix " data-percent="90%">
             <div class="skillbar-title" style="background: #DD1E2F;"><span>HTML5</span></div>
@@ -82,24 +98,7 @@
             <div class="skillbar-bar" style="background: #218559;"></div>
             <div class="skill-bar-percent">75%</div>
           </div> <!-- End Skill Bar -->
-
-          <div class="skillbar clearfix " data-percent="45%">
-            <div class="skillbar-title" style="background: #6840D4;"><span>C#</span></div>
-            <div class="skillbar-bar" style="background: #6840D4;"></div>
-            <div class="skill-bar-percent">45%</div>
-          </div> <!-- End Skill Bar -->
-
-          <div class="skillbar clearfix " data-percent="30%">
-            <div class="skillbar-title" style="background: #06A2CB;"><span>jQuery</span></div>
-            <div class="skillbar-bar" style="background: #06A2CB;"></div>
-            <div class="skill-bar-percent">30%</div>
-          </div> <!-- End Skill Bar -->
-
-          <div class="skillbar clearfix " data-percent="20%">
-            <div class="skillbar-title" style="background: #AB4DD2;"><span>Python</span></div>
-            <div class="skillbar-bar" style="background: #AB4DD2;"></div>
-            <div class="skill-bar-percent">20%</div>
-          </div> <!-- End Skill Bar -->
+        </div>
         </div>
       </div>
     </div>
@@ -122,47 +121,13 @@
           <h1><a href="https://codepen.io/FRADAR/full/bGgpyEP">My other Portfolio</a></h1>
           <p>My mockup portfolio</p>
         </div>
-        <div class="slide">
-          <h1>Extensions/Bookmarklets</h1>
-          <p>I have created many chrome extensions and bookmarklets.</p>
-        </div>
-        <div class="slide">
-          <h1>Websites</h1>
-          <p>I have created websites for myself.</p>
-        </div>
-        <div class="slide">
-            <h1><a href="https://codepen.io/FRADAR/full/WNoVEzy">The Impossible Game</a></h1>
-          <p>A game inspired by Geometry Dash.</p>
-        </div>
-        <div class="slide">
-            <h1><a href="https://codepen.io/FRADAR/full/zYNWZQQ">Car Riding Simulator</a></h1>
-          <p>A VR expirience.</p>
-        </div>
-        <div class="slide">
-            <h1><a href="https://codepen.io/collection/JGoErV">Multiplayer Online Games</a></h1>
-          <p>Play with people all around the world.</p>
-                  </div>
-        <div class="slide">
-            <h1><a href="https://codepen.io/FRADAR/full/JjWwOZX">Snake VS. Blocks</a></h1>
-          <p>A game with 15 levels where you need to eat all the food and avoid the blocks.</p>
-                  </div>
-                          </div>
-        <div class="slide">
-            <h1><a href="https://codepen.io/FRADAR/full/ZEeYKdK">The Invisible Lizard Hunter Game.</a></h1>
-          <p>A 2D fast-paced shooter game.</p>
-                  </div>
-        <div class="slide">
-            <h1>For more amazing games like these...</h1>
-          <p><a href="https://codepen.io/FRADAR">Click Here.</a></p>
-        </div>
       </div>
     </div>
     <!-- end section -->
 
 
-<section class="game-section">
-  <h2 class="line-title">trending games</h2>
-  <div class="owl-carousel custom-carousel owl-theme">
+<div class="section" data-anchor="game">
+  <div class="game-section owl-carousel custom-carousel owl-theme">
     <div class="item active" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg);">
       <div class="item-desc">
         <h3>Dota 2</h3>
@@ -191,22 +156,9 @@
           Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
       </div>
     </div>
-    <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/fortnite.jpg);">
-      <div class="item-desc">
-        <h3>Fortnite</h3>
-        <p>Battle royale where 100 players fight to be the last person standing. which was a community-created mod
-          for Blizzard Entertainment's Warcraft III.</p>
-      </div>
-    </div>
-    <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/far-cry-5.jpg);">
-      <div class="item-desc">
-        <h3>Far Cry 5</h3>
-        <p>Far Cry 5 is a 2018 first-person shooter game developed by Ubisoft.
-          which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
-      </div>
     </div>
   </div>
-</section>
+</div>
 
     <!-- begin section -->
     <div class="section" data-anchor="contact">
