--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -4,7 +4,10 @@ button {
   outline: 0!important;
 }
 h1 {
+  margin-top: 20px;
   font-size:2.5rem;
+  text-align: center;
+  color: #06A2CB;
 }
 
 .quiz progress {
