--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,120 @@
+body {
+  background: radial-gradient(rgba(68, 68, 68, 0.44), rgba(137, 230, 234, 0.79));
+  font-family: "Comfortaa", sans-serif;
+}
+
+.main-content {
+  max-width: 700px;
+  margin: 4em auto 0;
+  text-align: center;
+}
+
 .welcome {
-  background-image: url('/images/lake.jpg'); /* 设置背景图片 */
-  background-size: cover; /* 确保背景图片覆盖整个区域 */
-  background-position: center; /* 将背景图片居中 */
-  background-repeat: no-repeat; /* 防止背景图片重复 */
-  height: 94.5vh; /* 设置高度为视口高度 */
+    font-size: 24px;
+    color: #ffffff;
+}
+
+
+h1 {
+  margin: 2em 0;
+  color: #fff;
+}
+
+svg {
+  display: inline-block;
+}
+
+.illustration {
+  position: relative;
+  align-self: end;
+  margin: auto;
+  height: 250px;
+  width: 250px;
+}
+
+.boy,
+.scenery,
+.background-items,
+.foreground-items {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.scenery {
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.background-items {
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 100ms;
+  top: 23px;
+}
+
+.foreground-items {
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 200ms;
+  bottom: 20px;
+}
+
+.home-body .foreground-items {
+  margin-left: -60px;
+}
+
+.outdoor-person .foreground-items {
+  margin-right: -80px;
+}
+
+.boy {
+  bottom: 25px;
+  margin-right: -65px;
+  z-index: 10;
+}
+
+.person-type > div {
+  transform: scale(0);
+  opacity: 0;
+}
+
+.person-type.active > div {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.option-wrapper {
+  display: flex;
+  margin: 3em auto;
+  background: rgba(255, 255, 255, 0.25);
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 500px;
+  font-size: 12px;
+  line-height: 1.2;
+}
+.option-wrapper .option {
+  transition: all 200ms ease;
+  padding: 10px 10px 8px;
+  width: 50%;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #fff;
+}
+.option-wrapper .option.active {
+  background: #fff;
+  color: #333;
+  pointer-events: none;
+}
+
+aside.context {
+  text-align: center;
+  color: #fff;
+}
+aside.context a {
+  text-decoration: none;
+  color: #fff;
+  padding: 3px 0;
+  border-bottom: 1px dashed;
+}
+aside.context .explanation {
+  max-width: 700px;
+  margin: 4em auto;
 }
