--- a/public/stylesheets/user/skill.css
+++ b/public/stylesheets/user/skill.css
@@ -1,6 +1,16 @@
 /* Skill bars */
+.content-skill{
+  width: 90%;
+  margin: 0 auto;
+
+}
+
+.content-skill p {
+    text-align: left;
+}
+
 .container-skillbar {
-  width: 100%;
+
   padding-top: 30px;
   padding-right: 2%;
   padding-left: 2%;
