--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,19 +23,35 @@
 </header>
 <!-- end of header area -->
 
-<section class="welcome">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h1>Welcome to my page</h1>
-        <p>My name is Alpha, I am a web
+<!-- partial:index.partial.html -->
+<div class="main-content">
+    <div class="welcome">
+
+        <span id="typing" style="font-size: 36px"></span>
+
+    </div>
+<h1>Hi, I'm WANG JUNBO!</h1>
+  <div class="illustration">
+    <div class="boy"> <img src="images/checo.png" width="180px" /></div>
+    <div class="person-type-wrapper">
+      <div class="person-type active home-body">
+        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/indoor.svg" height="250"/></div>
+        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/furniture.svg" width="270"/></div>
+        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/playstation.svg" width="65"/></div>
       </div>
-      <div class="col-md-6">
-        <img src="images/alpha.jpg" alt="Alpha">
+      <div class="person-type outdoor-person">
+        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/outdoor.svg" height="250"/></div>
+        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/sky.svg" width="220"/></div>
+        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/dogtree.svg" width="200"/></div>
       </div>
     </div>
   </div>
-</section>
+  <div class="option-wrapper">
+    <div class="option active" data-option="home">I'm attached to my home.</div>
+    <div class="option" data-option="outdoor">Hell yeah, I love the outdoors!</div>
+  </div>
+</div>
+
 
 
 
@@ -44,9 +60,11 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
 <!-- 引入 Bootstrap JS 文件（可选） -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="javascripts/script.js"></script>
+<script src="javascripts/index.js"></script>
 
 </body>
 </html>
